# ybyrastac

./: .gitignore  .readthedocs.yaml  CITATION.cff  HOSTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-browser.yml
browser/: index.html
browser/assets/: AlertBox-ssSLxcVI.js  AlertBox-ssSLxcVI.js.map  AnonymizedNotice-DzuX6ivc.js  AnonymizedNotice-DzuX6ivc.js.map  ApiKey-BdVV5wxW.js  ApiKey-BdVV5wxW.js.map  ApiSearch-BKMd8Wrq.js  ApiSearch-BKMd8Wrq.js.map  Asset-DSd6KeDa.js  Asset-DSd6KeDa.js.map  AssetAlternative-DpGikymz.js  AssetAlternative-DpGikymz.js.map  Assets-CjWvApgb.js  Assets-CjWvApgb.js.map  AuthSchemeItem-D1LPC-qw.js  AuthSchemeItem-D1LPC-qw.js.map  BAccordion.vue_vue_type_script_setup_true_lang-Ccx3zW5a-BF2uumvS.js  BAccordion.vue_vue_type_script_setup_true_lang-Ccx3zW5a-BF2uumvS.js.map  BBadge.vue_vue_type_script_setup_true_lang-D9DEOOtU-B9_-XYl3.js  BBadge.vue_vue_type_script_setup_true_lang-D9DEOOtU-B9_-XYl3.js.map  BCard.vue_vue_type_script_setup_true_lang-9RhyvL8I-BBSf_Foq.js  BCard.vue_vue_type_script_setup_true_lang-9RhyvL8I-BBSf_Foq.js.map  BCardText.vue_vue_type_script_setup_true_lang-SRGbviaO-CRD7p-yi.js  BCardText.vue_vue_type_script_setup_true_lang-SRGbviaO-CRD7p-yi.js.map  BCollapse.vue_vue_type_script_setup_true_lang-BUisG8-R-CkXEJ2aG.js  BCollapse.vue_vue_type_script_setup_true_lang-BUisG8-R-CkXEJ2aG.js.map  BDropdownText.vue_vue_type_script_setup_true_lang-Cm6QYE9x-5N68Yfd6.js  BDropdownText.vue_vue_type_script_setup_true_lang-Cm6QYE9x-5N68Yfd6.js.map  BForm.vue_vue_type_script_setup_true_lang-u44ElAm9-7s-1AS2w.js  BForm.vue_vue_type_script_setup_true_lang-u44ElAm9-7s-1AS2w.js.map  (+344 more)
examples/: 01_discover_and_subset_mspa_ma.py  02_multiproduct_alignment.py  03_secondary_forest_recovery_scenarios.py  04_emissions_vs_frel.py  YbYraSTAC_pipeline_piloto.ipynb
stac_catalog/: catalog.json
tests/: test_smoke.py
ybyrastac/: __init__.py
(+275 files in other folders)
