[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ybyrastac"
description = "Toolbox for Brazilian forest EO datasets via STAC (YbYrá-BR)"
readme = "README.md"
license = { text = "EUPL-1.2" }
requires-python = ">=3.10"
authors = [
  { name = "Celso H. L. Silva Junior", email = "celso.junior@ufma.br" },
]
keywords = ["stac", "forest", "brazil", "amazon", "remote-sensing", "eo-data", "mspa", "redd"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
  "pystac>=1.10",
  "pystac-client>=0.7",
  "xarray>=2024.1",
  "rioxarray>=0.15",
  "rasterio>=1.3",
  "zarr>=2.17",
  "fsspec>=2024.1",
  "s3fs>=2024.1",
  "aiohttp>=3.9",
  "dask[complete]>=2024.1",
  "geopandas>=0.14",
  "shapely>=2.0",
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "black", "ruff", "mypy", "pre-commit"]
docs = ["sphinx>=7", "sphinx-book-theme", "sphinx-gallery", "myst-parser", "nbsphinx"]

[project.urls]
Homepage = "https://github.com/celsohlsj/ybyrastac"
Documentation = "https://ybyrastac.readthedocs.io/"
Repository = "https://github.com/celsohlsj/ybyrastac"
Browser = "https://celsohlsj.github.io/ybyrastac/"

[tool.setuptools_scm]
version_scheme = "calver-by-date"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["ybyrastac*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
